// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ventoDevice should be able to get status from modbus on init 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {
      "alarm_boost": 2,
      "alarm_filter": 2,
      "alarm_generic": 2,
    },
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "log",
        "Found device at IP 127.0.0.3",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "log",
        "Device state received: ",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Device IP changed from [object Promise] to 127.0.0.3",
      ],
      [
        "setAvailable",
        undefined,
      ],
      [
        "log",
        "Triggering alarm_boost_true",
      ],
      [
        "triggered",
        "alarm_boost_true",
        [
          VentoDevice {
            "api": Api {
              "deviceId": "TEST1234",
              "deviceIp": "127.0.0.3",
              "devicePass": "password",
              "error": [Function],
              "getDeviceState": [Function],
              "log": [Function],
              "modbusClient": BlaubergVentoClient {
                "findDevices": [MockFunction],
                "send": [MockFunction] {
                  "calls": [
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": Uint8Array [
                              1,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 2,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 183,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 7,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                  ],
                  "results": [
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                  ],
                },
                "timeout": 1500,
              },
              "send": [Function],
              "setBoostDelay": [Function],
              "setDeviceValue": [Function],
              "setHumiditySensor": [Function],
              "setHumiditySensorThreshold": [Function],
              "setManualSpeed": [Function],
              "setOnOffStatus": [Function],
              "setOperationMode": [Function],
              "setSpeedMode": [Function],
              "setTimerMode": [Function],
            },
            "discoveryClient": VentoDiscovery {
              "findById": [Function],
              "findDevices": [Function],
              "modbusClient": BlaubergVentoClient {
                "findDevices": [MockFunction] {
                  "calls": [
                    [],
                  ],
                  "results": [
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                  ],
                },
                "send": [MockFunction] {
                  "calls": [
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": Uint8Array [
                              1,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 2,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 183,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 7,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                  ],
                  "results": [
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                  ],
                },
                "timeout": 1500,
              },
            },
            "error": [Function],
            "getMockCalls": [Function],
            "homey": {
              "flow": {
                "getActionCard": [Function],
                "getConditionCard": [Function],
                "getDeviceTriggerCard": [Function],
              },
              "setInterval": [MockFunction] {
                "calls": [
                  [
                    [Function],
                    15000,
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              },
            },
            "id": "TEST1234",
            "log": [Function],
            "onCapabilityFanSpeed": [Function],
            "onCapabilityManualSpeed": [Function],
            "onCapabilityOnOff": [Function],
            "onCapabilityOperationMode": [Function],
            "onCapabilitySpeedMode": [Function],
            "onCapabilityTimerMode": [Function],
            "pollInterval": undefined,
            "settings": {
              "boost_delay": undefined,
              "devicemodel": "Vento Expert",
              "devicepwd": "password",
              "humidity_sensor": false,
              "humidity_threshold": undefined,
              "last_known_ip": "127.0.0.3",
            },
            "store": {
              "lastKnownIP": "127.0.0.3",
            },
          },
          {},
          {},
        ],
      ],
      [
        "log",
        "Triggering alarm_filter_false",
      ],
      [
        "triggered",
        "alarm_filter_false",
        [
          VentoDevice {
            "api": Api {
              "deviceId": "TEST1234",
              "deviceIp": "127.0.0.3",
              "devicePass": "password",
              "error": [Function],
              "getDeviceState": [Function],
              "log": [Function],
              "modbusClient": BlaubergVentoClient {
                "findDevices": [MockFunction],
                "send": [MockFunction] {
                  "calls": [
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": Uint8Array [
                              1,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 2,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 183,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 7,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                  ],
                  "results": [
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                  ],
                },
                "timeout": 1500,
              },
              "send": [Function],
              "setBoostDelay": [Function],
              "setDeviceValue": [Function],
              "setHumiditySensor": [Function],
              "setHumiditySensorThreshold": [Function],
              "setManualSpeed": [Function],
              "setOnOffStatus": [Function],
              "setOperationMode": [Function],
              "setSpeedMode": [Function],
              "setTimerMode": [Function],
            },
            "discoveryClient": VentoDiscovery {
              "findById": [Function],
              "findDevices": [Function],
              "modbusClient": BlaubergVentoClient {
                "findDevices": [MockFunction] {
                  "calls": [
                    [],
                  ],
                  "results": [
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                  ],
                },
                "send": [MockFunction] {
                  "calls": [
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": Uint8Array [
                              1,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 2,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 183,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 7,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                  ],
                  "results": [
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                  ],
                },
                "timeout": 1500,
              },
            },
            "error": [Function],
            "getMockCalls": [Function],
            "homey": {
              "flow": {
                "getActionCard": [Function],
                "getConditionCard": [Function],
                "getDeviceTriggerCard": [Function],
              },
              "setInterval": [MockFunction] {
                "calls": [
                  [
                    [Function],
                    15000,
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              },
            },
            "id": "TEST1234",
            "log": [Function],
            "onCapabilityFanSpeed": [Function],
            "onCapabilityManualSpeed": [Function],
            "onCapabilityOnOff": [Function],
            "onCapabilityOperationMode": [Function],
            "onCapabilitySpeedMode": [Function],
            "onCapabilityTimerMode": [Function],
            "pollInterval": undefined,
            "settings": {
              "boost_delay": undefined,
              "devicemodel": "Vento Expert",
              "devicepwd": "password",
              "humidity_sensor": false,
              "humidity_threshold": undefined,
              "last_known_ip": "127.0.0.3",
            },
            "store": {
              "lastKnownIP": "127.0.0.3",
            },
          },
          {},
          {},
        ],
      ],
      [
        "log",
        "Triggering alarm_generic_true",
      ],
      [
        "triggered",
        "alarm_generic_true",
        [
          VentoDevice {
            "api": Api {
              "deviceId": "TEST1234",
              "deviceIp": "127.0.0.3",
              "devicePass": "password",
              "error": [Function],
              "getDeviceState": [Function],
              "log": [Function],
              "modbusClient": BlaubergVentoClient {
                "findDevices": [MockFunction],
                "send": [MockFunction] {
                  "calls": [
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": Uint8Array [
                              1,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 2,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 183,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 7,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                  ],
                  "results": [
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                  ],
                },
                "timeout": 1500,
              },
              "send": [Function],
              "setBoostDelay": [Function],
              "setDeviceValue": [Function],
              "setHumiditySensor": [Function],
              "setHumiditySensorThreshold": [Function],
              "setManualSpeed": [Function],
              "setOnOffStatus": [Function],
              "setOperationMode": [Function],
              "setSpeedMode": [Function],
              "setTimerMode": [Function],
            },
            "discoveryClient": VentoDiscovery {
              "findById": [Function],
              "findDevices": [Function],
              "modbusClient": BlaubergVentoClient {
                "findDevices": [MockFunction] {
                  "calls": [
                    [],
                  ],
                  "results": [
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                  ],
                },
                "send": [MockFunction] {
                  "calls": [
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": undefined,
                          },
                          {
                            "parameter": 2,
                            "value": undefined,
                          },
                          {
                            "parameter": 68,
                            "value": undefined,
                          },
                          {
                            "parameter": 6,
                            "value": undefined,
                          },
                          {
                            "parameter": 102,
                            "value": undefined,
                          },
                          {
                            "parameter": 183,
                            "value": undefined,
                          },
                          {
                            "parameter": 136,
                            "value": undefined,
                          },
                          {
                            "parameter": 100,
                            "value": undefined,
                          },
                          {
                            "parameter": 37,
                            "value": undefined,
                          },
                          {
                            "parameter": 15,
                            "value": undefined,
                          },
                          {
                            "parameter": 25,
                            "value": undefined,
                          },
                          {
                            "parameter": 185,
                            "value": undefined,
                          },
                          {
                            "parameter": 74,
                            "value": undefined,
                          },
                          {
                            "parameter": 7,
                            "value": undefined,
                          },
                          {
                            "parameter": 131,
                            "value": undefined,
                          },
                          {
                            "parameter": 11,
                            "value": undefined,
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 1,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 1,
                            "value": Uint8Array [
                              1,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 2,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 68,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 183,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                    [
                      E {
                        "_dataEntries": [
                          {
                            "parameter": 7,
                            "value": Uint8Array [
                              0,
                            ],
                          },
                        ],
                        "_deviceId": "TEST1234",
                        "_functionType": 2,
                        "_password": "password",
                      },
                      "127.0.0.3",
                    ],
                  ],
                  "results": [
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                    {
                      "type": "return",
                      "value": Promise {},
                    },
                  ],
                },
                "timeout": 1500,
              },
            },
            "error": [Function],
            "getMockCalls": [Function],
            "homey": {
              "flow": {
                "getActionCard": [Function],
                "getConditionCard": [Function],
                "getDeviceTriggerCard": [Function],
              },
              "setInterval": [MockFunction] {
                "calls": [
                  [
                    [Function],
                    15000,
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              },
            },
            "id": "TEST1234",
            "log": [Function],
            "onCapabilityFanSpeed": [Function],
            "onCapabilityManualSpeed": [Function],
            "onCapabilityOnOff": [Function],
            "onCapabilityOperationMode": [Function],
            "onCapabilitySpeedMode": [Function],
            "onCapabilityTimerMode": [Function],
            "pollInterval": undefined,
            "settings": {
              "boost_delay": undefined,
              "devicemodel": "Vento Expert",
              "devicepwd": "password",
              "humidity_sensor": false,
              "humidity_threshold": undefined,
              "last_known_ip": "127.0.0.3",
            },
            "store": {
              "lastKnownIP": "127.0.0.3",
            },
          },
          {},
          {},
        ],
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {
      "alarm_boost": [
        [
          true,
          {
            "result": true,
          },
        ],
      ],
      "alarm_connectivity": [
        [
          false,
          "calling unregistered capability",
        ],
      ],
      "alarm_filter": [
        [
          false,
          {
            "result": false,
          },
        ],
      ],
      "alarm_generic": [
        [
          true,
          {
            "result": true,
          },
        ],
      ],
      "fan_speed": [
        [
          -0.00392156862745098,
          {
            "result": undefined,
          },
        ],
      ],
      "filter_timer": [
        [
          "undefined:undefined:undefined",
          "calling unregistered capability",
        ],
      ],
      "manualSpeed": [
        [
          -0.39215686274509803,
          {
            "result": undefined,
          },
        ],
      ],
      "measure_RPM": [
        [
          undefined,
          "calling unregistered capability",
        ],
      ],
      "measure_humidity": [
        [
          undefined,
          "calling unregistered capability",
        ],
      ],
      "onoff": [
        [
          false,
          {
            "result": undefined,
          },
        ],
      ],
      "operationMode": [
        [
          undefined,
          {
            "result": undefined,
          },
        ],
      ],
      "speedMode": [
        [
          undefined,
          {
            "result": undefined,
          },
        ],
      ],
      "timerMode": [
        [
          undefined,
          {
            "result": undefined,
          },
        ],
      ],
      "timerMode_timer": [
        [
          "undefined:undefined:undefined",
          "calling unregistered capability",
        ],
      ],
    },
    "settings": {
      "boost_delay": undefined,
      "devicemodel": "Vento Expert",
      "devicepwd": "password",
      "humidity_sensor": false,
      "humidity_threshold": undefined,
      "last_known_ip": "127.0.0.3",
    },
  },
}
`;

exports[`ventoDevice should be able to get status when device is marked as off 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "error",
        "Could not connect to device at IP 127.0.0.3",
        [TypeError: Cannot read properties of undefined (reading 'then')],
      ],
      [
        "error",
        "Could not connect to device at IP [object Promise]",
        [TypeError: Cannot read properties of undefined (reading 'then')],
      ],
      [
        "log",
        "Device IP could not be found, setting device to unavailable",
      ],
      [
        "setUnavailable was called",
        "Device not discovered yet",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "error",
        "Failed to get device state, device unreachable",
        {
          "deviceId": undefined,
          "deviceIp": undefined,
        },
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {},
    "settings": {
      "devicepwd": "password",
    },
  },
}
`;

exports[`ventoDevice should be able to handle errors 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "error",
        "Could not connect to device at IP 127.0.0.3",
        [TypeError: Cannot read properties of undefined (reading 'then')],
      ],
      [
        "error",
        "Could not connect to device at IP [object Promise]",
        [TypeError: Cannot read properties of undefined (reading 'then')],
      ],
      [
        "log",
        "Device IP could not be found, setting device to unavailable",
      ],
      [
        "setUnavailable was called",
        "Device not discovered yet",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "error",
        "Failed to get device state, device unreachable",
        {
          "deviceId": undefined,
          "deviceIp": undefined,
        },
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {},
    "settings": {
      "devicepwd": "password",
    },
  },
  "error": undefined,
}
`;

exports[`ventoDevice should be able to setup all capabilities 1`] = `
{
  "calls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {},
    "settings": {
      "devicepwd": "password",
    },
  },
}
`;

exports[`ventoDevice should get and set values trough the api and modbus 1`] = `
{
  "modbusCalls": [],
}
`;

exports[`ventoDevice should init the api 1`] = `
{
  "deviceId": undefined,
  "deviceIp": undefined,
  "devicePass": undefined,
}
`;
